[package]
name = "ruby_lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ruby_lsp"
path = "src/lib.rs"

[dependencies]
lsp-server = "0.6.0"
tree-sitter = "0.20.6"
tree-sitter-ruby = "0.19.0"


[dev-dependencies]
matches = "0.1"
