[package]
name = "ruby_lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ruby_lsp"
path = "src/lib.rs"

[dependencies]

# utils
anyhow = "1.0"
env_logger = "0.8"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.4"
thiserror = "1.0"

clap = "3.0.10"

# Language server
lsp-server = "0.6.0"
tree-sitter = "0.20.6"
tree-sitter-ruby = "0.19.0"


[dev-dependencies]
matches = "0.1"
